tests/checker/diagnostics/0875_gadt_packed_branch_result_mismatch_02.ml.infer.expected
File "0875_gadt_packed_branch_result_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0875_gadt_packed_branch_result_mismatch_02 is not a valid module name.

File "0875_gadt_packed_branch_result_mismatch_02.ml", line 9, characters 31-32:
9 |   | Pack_beta (Bool_beta b) -> b
                                   ^
Error: The value b has type bool but an expression was expected of type int
